<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeongClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_login_name">登录名</string>
    <string name="txt_login_password">登录密码</string>
    <string name="btn_login">登陆</string>
    <string name="btn_reset">重置</string>
    <string name="hint_login_name">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="title_activity_device_list">DeviceList</string>
    <string name="title_activity_register">Register</string>
    <string name="txt_register_interesting">兴趣爱好</string>
    <string name="chk_game">游戏</string>
	<string name="chk_music">音乐</string>
	<string name="chk_sports">运动</string>
	<string name="btn_register">注册</string>
	<string name="txt_register_name">注册名</string>
	<string name="img_tip">图片提示</string>
	
</resources>
