<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" 
    android:orientation="vertical">

  	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_gravity="bottom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_name"/>
        <EditText 
            android:id="@+id/txt_register_name"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_name"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_interesting"/>
        <CheckBox 
            android:id="@+id/chk_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_game"/>
        <CheckBox 
            android:id="@+id/chk_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_music"/>
        <CheckBox 
            android:id="@+id/chk_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_sports"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        
        <Button 
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"/>
        <Button 
            android:id="@+id/btn_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"/>
        
    </LinearLayout>

</LinearLayout>
